--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -5,26 +5,26 @@
 
     <item
         android:id="@+id/action_home"
-        android:icon="@drawable/instagram_home_filled_24"
+        android:icon="@drawable/shopping"
         android:title="Home"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/action_create"
-        android:icon="@drawable/instagram_new_post_outline_24"
+        android:icon="@drawable/tag_plus"
         android:title="Create"
         app:showAsAction="always" />
 
 
     <item
         android:id="@+id/action_dashboard"
-        android:icon="@android:drawable/ic_menu_preferences"
+        android:icon="@drawable/view_dashboard"
         android:title="Dashboard"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/action_profile"
-        android:icon="@drawable/instagram_user_outline_24"
+        android:icon="@drawable/account_circle"
         android:title="Profile"
         app:showAsAction="always" />
 
