--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,7 +24,7 @@
         android:layout_weight="1"
         android:buttonTint="@color/dark_salmon"
         android:checked="false"
-        android:fontFamily="@font/baumans"
+        android:fontFamily="@font/allerta"
         android:text="filter items by my measurements"
         android:textColor="@color/dark_salmon"
         android:textSize="16sp"
@@ -45,7 +45,7 @@
         android:layout_height="400dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="9dp"
         android:layout_marginEnd="80dp"
         android:layout_marginBottom="8dp"
         app:lottie_autoPlay="false"
@@ -58,7 +58,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/locationLoadingAnim"
-        android:fontFamily="@font/baumans"
+        android:fontFamily="@font/allerta"
         android:text="finding clothes near you..."
         android:textAlignment="center"
         android:textColor="@color/dark_salmon"
