--- a/app/src/main/res/layout/item_clothing.xml
+++ b/app/src/main/res/layout/item_clothing.xml
@@ -40,6 +40,7 @@
                 android:layout_toRightOf="@id/ivItemImageRV"
                 android:ellipsize="end"
                 android:fontFamily="@font/allerta"
+                android:maxEms="15"
                 android:maxLines="1"
                 android:text="TextView"
                 android:textStyle="bold"
@@ -54,6 +55,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_toEndOf="@+id/tvItemNameRV"
                 android:fontFamily="@font/allerta"
+                android:maxLines="1"
                 android:text="TextView"
                 android:textColor="@color/dark_salmon"
                 android:textStyle="bold"
