--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,12 +23,13 @@
 
     <EditText
         android:id="@+id/etUsername"
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvTitleLogin"
+        android:layout_marginTop="10dp"
         android:layout_weight="1"
         android:ems="10"
+        android:fontFamily="@font/allerta"
         android:hint="Username"
         android:textAlignment="center" />
 
@@ -39,6 +40,7 @@
         android:layout_below="@id/etUsername"
         android:layout_weight="1"
         android:ems="10"
+        android:fontFamily="@font/allerta"
         android:hint="Password"
         android:inputType="textPassword"
         android:textAlignment="center" />
@@ -50,6 +52,7 @@
         android:layout_below="@id/etPassword"
         android:layout_weight="1"
         android:backgroundTint="@color/dark_salmon"
+        android:fontFamily="@font/allerta"
         android:text="log in " />
 
     <TextView
@@ -57,6 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/btnLogin"
+        android:fontFamily="@font/allerta"
         android:text="OR"
         android:textAlignment="center"
         android:textSize="16sp"
@@ -68,6 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tvOr"
         android:layout_weight="1"
+        android:fontFamily="@font/allerta"
         android:text="create an account" />
 
 </RelativeLayout>
